--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.meta.xr.simulator": "66.0.1",
     "com.unity.collab-proxy": "2.4.3",
     "com.unity.formats.fbx": "4.2.1",
     "com.unity.ide.rider": "3.0.27",
